--- a/vue/public/index.html
+++ b/vue/public/index.html
@@ -31,4 +31,12 @@
   <div id="app"></div>
 
 </body>
+
+<style>
+  iframe[name='JSD widget'] {
+  display: block;
+  left: 0;
+  bottom: 10px;
+  }
+  </style>
 </html>
