feat: update layout and install tailwind, pinia

--- a/vue/public/index.html
+++ b/vue/public/index.html
@@ -34,9 +34,8 @@
 
 <style>
   iframe[name='JSD widget'] {
-  display: block;
-  left: 0;
-  bottom: 10px;
+    display: block;
+    right: 10px !important;
   }
-  </style>
+</style>
 </html>
